--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "dev": "concurrently \"npm start\""
+    "dev": "nodemon --watch src --ext js,jsx --exec \"npm run start\""
   },
   "eslintConfig": {
     "extends": [
